--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "autoprefixer": "^9.8.6"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^1.2.0",
-    "cross-env": "^5.2.1",
+    "@fullhuman/postcss-purgecss": "2.3.0",
+    "cross-env": "^7.0.2",
     "cssnano": "^4.1.10",
     "laravel-mix": "^5.0.5",
     "laravel-mix-postcss-config": "^1.0.4",
-    "postcss-cli": "^6.1.2",
+    "postcss-cli": "^7.1.2",
     "postcss-nested": "^4.2.3",
     "tailwindcss": "^1.8.5"
   }
